# phone-toolkit

./: .gitignore  DELIVERABLES.md  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UV_GUIDE.md  UV_INTEGRATION.md  cleanup.sh  demo_performance.sh  pyproject.toml  uv.toml.example  verify_uv.sh
.github/workflows/: ci.yml  publish.yml  release.yml
src/phone_parser/: __init__.py  country.py  phone.py  py.typed
tests/: test_phone.py
